Updated FlipCard layout, hero particles, reviews and contact section

--- a/index.html
+++ b/index.html
@@ -1,331 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <title>Code Elevate Academy — Learn Smarter. Build Faster.</title>
-  <meta name="description" content="Hands-on web development courses, mentorship, projects and industry readiness at Code Elevate Academy. Learn smarter. Build faster." />
-
-  <!-- Canonical & social -->
-  <link rel="canonical" href="https://codeelevateacademy.example/" />
-  <meta property="og:title" content="Code Elevate Academy" />
-  <meta property="og:description" content="Hands-on courses, guided projects and mentorship for modern developers." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="./images/model.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- JSON-LD: Organization -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Code Elevate Academy",
-    "url": "https://codeelevateacademy.example/",
-    "logo": "./images/logo.png",
-    "sameAs": ["https://twitter.com/", "https://www.linkedin.com/"]
-  }
-  </script>
-
-  <link rel="preload" as="image" href="./images/model.png" />
-  <link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-  <a class="skip-link" href="#main">Skip to content</a>
-
-  <header class="site-header" role="banner">
-    <div class="logo" aria-label="Code Elevate Academy">
-      <img src="./images/logo.png" alt="Code Elevate Academy logo" width="160" height="90" />
-    </div>
-
-    <nav aria-label="Primary">
-      <ul class="nav">
-        <li><a class="btn btn--ghost" href="#home">Home</a></li>
-        <li><a class="btn btn--ghost" href="#about">About Us</a></li>
-        <li><a class="btn btn--ghost" href="#courses">Courses</a></li>
-        <li><a class="btn btn--ghost" href="#programs">Programs</a></li>
-        <li><a class="btn btn--ghost" href="#reviews">Reviews</a></li>
-        <li><a class="btn btn--gradient" href="#contact" aria-label="Contact Us">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main id="main">
-    <!-- HERO -->
-    <section id="home" class="hero" aria-labelledby="hero-title">
-      <div id="particles-js" class="particles-layer" aria-hidden="true"></div>
-
-      <div class="hero-inner">
-        <div class="hero-content">
-          <h1 id="hero-title">Learn Smarter. Build Faster.<br />Elevate Your Skills.</h1>
-          <p class="lead">
-            From zero-to-pro: modern web development, real projects, mentorship and
-            job-ready skills — all in one place.
-          </p>
-
-          <div class="hero-cta">
-            <a href="#courses" class="btn btn--gradient">Get Started</a>
-            <a href="#programs" class="btn btn--outline">Explore Programs</a>
-          </div>
-        </div>
-
-        <div class="hero-image">
-          <!-- Live animated model image (kept the same source) -->
-          <img
-            src="./images/model.png"
-            alt="Learner holding a laptop"
-            class="hero-model floating"
-            width="520"
-            height="520"
-            decoding="async"
-            fetchpriority="high"
-          />
-        </div>
-      </div>
-    </section>
-
-    <!-- ABOUT -->
-    <section class="about" id="about" aria-labelledby="about-title">
-      <div id="particles-js-about" class="particles-layer" aria-hidden="true"></div>
-
-      <div class="about-container">
-        <div class="about-image">
-          <img src="./images/group.png" alt="Mentors collaborating at Code Elevate Academy"
-               loading="lazy" width="580" height="420" />
-        </div>
-
-        <div class="about-text">
-          <h2 id="about-title">About Us</h2>
-          <div class="about-card">
-            <h3>Who We Are</h3>
-            <h4>A strong community of certified mentors</h4>
-            <p>At Code Elevate, we believe great developers aren’t born — they’re built. We make
-              practical coding education accessible to everyone through beginner-friendly tutorials,
-              deep dives, and real-world projects.</p>
-            <p>All content is crafted by experienced developers and educators who understand the
-              challenges of learning to code — and how to overcome them.</p>
-            <a href="#courses" class="btn btn--gradient">Get Started</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- COURSES -->
-    <section class="courses" id="courses" aria-labelledby="courses-title">
-      <div id="particles-js-courses" class="particles-layer" aria-hidden="true"></div>
-
-      <h2 id="courses-title">Explore Our Top Courses</h2>
-      <div class="courses-container">
-        <!-- Card 1 -->
-        <article class="course-card" aria-labelledby="c1-title">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="./images/full-stack.png" alt="Full Stack course banner" loading="lazy" width="640" height="200" />
-              <div class="card-content">
-                <p>Duration: 4–5 Months • 1,100 Reviews</p>
-                <h3 id="c1-title">Full Stack Development</h3>
-                <a href="#" class="read-more btn btn--chip" data-flip>Read More →</a>
-                <a href="#" class="join-now btn btn--gradient">Join Now</a>
-              </div>
-            </div>
-            <div class="card-back">
-              <h3>Full Stack Development</h3>
-              <p>Master modern front-end & back-end with projects. HTML, CSS, JS, Node.js and databases — job-ready skills.</p>
-              <a href="#" class="back-join btn btn--gradient" data-unflip>Join Now</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Card 2 -->
-        <article class="course-card" aria-labelledby="c2-title">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="./images/industry-readiness.png" alt="Industry Readiness program banner" loading="lazy" width="640" height="200" />
-              <div class="card-content">
-                <p>Duration: 5–6 Months • 3,400 Reviews</p>
-                <h3 id="c2-title">Industry Readiness Program</h3>
-                <a href="#" class="read-more btn btn--chip" data-flip>Read More →</a>
-                <a href="#" class="join-now btn btn--gradient">Join Now</a>
-              </div>
-            </div>
-            <div class="card-back">
-              <h3>Industry Readiness Program</h3>
-              <p>Agile workflows, collaboration and tooling you’ll use at work. Mock interviews included.</p>
-              <a href="#" class="back-join btn btn--gradient" data-unflip>Join Now</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Card 3 -->
-        <article class="course-card" aria-labelledby="c3-title">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="./images/soft-skills.png" alt="Soft Skills training banner" loading="lazy" width="640" height="200" />
-              <div class="card-content">
-                <p>Duration: 2–3 Months • 1,500 Reviews</p>
-                <h3 id="c3-title">Soft Skills Training</h3>
-                <a href="#" class="read-more btn btn--chip" data-flip>Read More →</a>
-                <a href="#" class="join-now btn btn--gradient">Join Now</a>
-              </div>
-            </div>
-            <div class="card-back">
-              <h3>Soft Skills Training</h3>
-              <p>Sharpen communication, leadership and problem-solving to thrive in real teams.</p>
-              <a href="#" class="back-join btn btn--gradient" data-unflip>Join Now</a>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <!-- SPECIAL PROGRAMS -->
-    <section class="special-programs" id="programs" aria-labelledby="programs-title">
-      <div id="particles-js-programs" class="particles-layer" aria-hidden="true"></div>
-
-      <h2 id="programs-title">Special Programs</h2>
-      <div class="programs-container">
-        <article class="program-card">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="./images/bootcamp.png" alt="Intensive Bootcamp banner" loading="lazy" width="640" height="200" />
-              <div class="card-content">
-                <p>Duration: 3 Months • 800 Reviews</p>
-                <h3>Intensive Bootcamp</h3>
-                <a href="#" class="learn-more btn btn--chip" data-flip>Learn More →</a>
-                <a href="#" class="join-now btn btn--gradient">Join Now</a>
-              </div>
-            </div>
-            <div class="card-back">
-              <h3>Intensive Bootcamp</h3>
-              <p>Accelerated full-stack, DevOps, and deployment in 12 weeks. Built for career switchers.</p>
-              <a href="#" class="back-join btn btn--gradient" data-unflip>Join Now</a>
-            </div>
-          </div>
-        </article>
-
-        <article class="program-card">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="./images/mentorship.png" alt="Mentorship Program banner" loading="lazy" width="640" height="200" />
-              <div class="card-content">
-                <p>Duration: 6 Months • 600 Reviews</p>
-                <h3>Mentorship Program</h3>
-                <a href="#" class="learn-more btn btn--chip" data-flip>Learn More →</a>
-                <a href="#" class="join-now btn btn--gradient">Join Now</a>
-              </div>
-            </div>
-            <div class="card-back">
-              <h3>Mentorship Program</h3>
-              <p>One-to-one guidance, weekly check-ins, project reviews and networking.</p>
-              <a href="#" class="back-join btn btn--gradient" data-unflip>Join Now</a>
-            </div>
-          </div>
-        </article>
-
-        <article class="program-card">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="./images/workshop.png" alt="Weekend Workshops banner" loading="lazy" width="640" height="200" />
-              <div class="card-content">
-                <p>Duration: 2 Months • 400 Reviews</p>
-                <h3>Weekend Workshops</h3>
-                <a href="#" class="learn-more btn btn--chip" data-flip>Learn More →</a>
-                <a href="#" class="join-now btn btn--gradient">Join Now</a>
-              </div>
-            </div>
-            <div class="card-back">
-              <h3>Weekend Workshops</h3>
-              <p>Hands-on sessions in AI, Cloud & Security — perfect for busy pros.</p>
-              <a href="#" class="back-join btn btn--gradient" data-unflip>Join Now</a>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <!-- STUDENT REVIEWS (carousel) -->
-    <section class="student-reviews" id="reviews" aria-labelledby="reviews-title">
-  <h2 id="reviews-title">What Our Students Say</h2>
-  <div class="reviews-container" role="region" aria-live="polite">
-    <div class="review-card">
-      <p class="review-text">“The Intensive Bootcamp transformed my career! Within 3 months, I built a full-stack app and got hired.”</p>
-      <p class="review-author">— Priya S., Full-Stack Developer at Infosys</p>
-    </div>
-    <div class="review-card">
-      <p class="review-text">“The Mentorship Program gave me the confidence to land my first job. My mentor reviewed every project patiently.”</p>
-      <p class="review-author">— Arjun K., Software Engineer at TCS</p>
-    </div>
-    <div class="review-card">
-      <p class="review-text">“Weekend Workshops were fun! I learned AI basics in just 4 sessions and built a chatbot for my college project.”</p>
-      <p class="review-author">— Sneha M., Data Analyst Intern</p>
-    </div>
-    <div class="review-card">
-      <p class="review-text">“Full Stack course was beginner-friendly and very practical. The job prep mock interviews were a huge bonus.”</p>
-      <p class="review-author">— Rohan P., Web Developer at StartUpX</p>
-    </div>
-    <div class="review-card">
-      <p class="review-text">“Industry Readiness Program taught me teamwork and Git workflows. I aced my internship interview with ease.”</p>
-      <p class="review-author">— Lakshmi R., IT Intern at Wipro</p>
-    </div>
-    <div class="review-card">
-      <p class="review-text">“Best decision I made this year! The Code Elevate community is always ready to help.”</p>
-      <p class="review-author">— Akash J., B.Tech Student</p>
-    </div>
-  </div>
-  <div class="nav-dots" aria-label="Review navigation"></div>
-</section>
-
-
-    <!-- CONTACT -->
-    <section class="contact-us" id="contact" aria-labelledby="contact-title">
-      <div id="particles-js-contact" class="particles-layer" aria-hidden="true"></div>
-
-      <div class="contact-container">
-        <div class="contact-form">
-          <h2 id="contact-title">Get in Touch</h2>
-          <form action="#" method="POST">
-            <div class="form-group">
-              <label class="sr-only" for="name">Your Name</label>
-              <input type="text" id="name" name="name" placeholder="Your Name" required />
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="email">Your Email</label>
-              <input type="email" id="email" name="email" placeholder="Your Email" required />
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="message">Your Message</label>
-              <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
-            </div>
-            <button type="submit" class="btn btn--gradient">Send Message</button>
-          </form>
-        </div>
-
-        <aside class="contact-info">
-          <h2>Contact Information</h2>
-          <p><strong>Address:</strong> Mehandibagh Colony, Nagpur, MH<br>* Ramna Maruti Nandanvan, Nagpur, MH</p>
-          <p><strong>Hours:</strong> Mon–Fri: 10am–7pm • Sat: 10am–5pm</p>
-          <p><strong>Phone:</strong> +91 9665658240</p>
-          <p><strong>Email:</strong> support@codeelevateacademy.tech</p>
-
-          <div class="map" aria-label="Map">
-            <iframe
-              title="Nagpur, Maharashtra on Google Maps"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.1234567890123!2d79.0882!3d21.1458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c3e9f0f0f0f0%3A0xabc123def456789!2sNagpur%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1692851234!5m2!1sen!2sin"
-              width="100%" height="220" style="border:0" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-          </div>
-        </aside>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer" role="contentinfo">
-    <p>© <span id="year"></span> Code Elevate Academy. All rights reserved.</p>
-  </footer>
-
-  <!-- Particles.js -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Code Elevate</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
